Fikser potensiell feil med saldodto